--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,11 +22,14 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
-        go-version: '1.24'
+        go-version: '1.24.3'
         cache: true
         cache-dependency-path: test-go/go.sum
+
+    - name: Verify Go version
+      run: go version
 
     - name: Install PortAudio dependencies
       run: |
@@ -56,10 +59,10 @@ jobs:
         go vet ./...
 
     - name: Run staticcheck
-      uses: dominikh/staticcheck-action@v1.3.0
-      with:
-        version: "2023.1.6"
-        working-directory: test-go
+      run: |
+        go install honnef.co/go/tools/cmd/staticcheck@latest
+        cd test-go
+        staticcheck ./...
 
   build-go:
     name: Build Go Client
@@ -79,9 +82,12 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
-        go-version: '1.24'
+        go-version: '1.24.3'
+
+    - name: Verify Go version
+      run: go version
 
     - name: Install PortAudio dependencies (Linux)
       if: matrix.os == 'linux'
@@ -172,3 +178,30 @@ jobs:
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
+
+  security:
+    name: Security Scan
+    runs-on: ubuntu-latest
+    
+    permissions:
+      contents: read
+      security-events: write
+      actions: read
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Run Trivy vulnerability scanner
+      uses: aquasecurity/trivy-action@master
+      with:
+        scan-type: 'fs'
+        scan-ref: '.'
+        format: 'sarif'
+        output: 'trivy-results.sarif'
+
+    - name: Upload Trivy scan results
+      if: always()
+      uses: github/codeql-action/upload-sarif@v3
+      with:
+        sarif_file: 'trivy-results.sarif'
